--- a/src/handlebars.cs/handlebars.cs.csproj
+++ b/src/handlebars.cs/handlebars.cs.csproj
@@ -56,8 +56,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Noesis.Javascript">
       <HintPath>reference\Noesis.Javascript.dll</HintPath>
@@ -82,6 +83,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="handlebars.js\handlebars-1.0.0.beta.6.js" />
+    <EmbeddedResource Include="handlebars.js\handlebars-1.0.0.js" />
+    <EmbeddedResource Include="handlebars.js\handlebars-1.0.rc.1.js" />
     <Content Include="msvcp100.dll" />
     <Content Include="msvcr100.dll" />
     <Content Include="reference\Noesis.Javascript.dll" />
