--- a/src/handlebars.cs/packages.config
+++ b/src/handlebars.cs/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClearScript.V8" version="5.3.10.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="Noesis.Javascript" version="0.7.1.0" targetFramework="net40" />
 </packages>
