Fixes to enable area based prefixes Addition of Controller Attribute to Add Handlebars Formatter

--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HandlebarsControllerConfiguration.cs" />
     <Compile Include="HandlebarsMediaTypeFormatter.cs" />
     <Compile Include="HttpUtility.cs" />
     <Compile Include="IRequestFormatter.cs" />
