Changes to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 bin
 obj
+packages
 
 # mstest test results
 TestResults
-/src/handlebars.cs.suo
+*.suo
+*.user
+*.DS_Store
