More Unit Tests

--- a/src/Handlebars.TestSuite/app.config
+++ b/src/Handlebars.TestSuite/app.config
@@ -6,7 +6,10 @@
     </sectionGroup>
   </configSections>
   <handlebars>
-    <settings engine="ClearScriptEngine">
+    <settings engine="ClearScriptEngine"
+              basePath="C:\Home\Development\handlebars-net\src\Handlebars.Helper"
+              scriptPath="C:\Home\Development\archfashion\archfashion-ui\script"
+              templatePath="C:\Home\Development\archfashion\archfashion-ui\template">
       <include>
         <!-- You can specify files which have been included in any project,
              to keep the standard install simple I've included a bunch of 
