--- a/src/Proxy/Handlebars.Proxy/app.config
+++ b/src/Proxy/Handlebars.Proxy/app.config
@@ -21,6 +21,7 @@
         <add src="helper/format.number.js" />
         <add src="helper/format.string.js" />
         <add src="helper/if.js" />
+        <add src="helper/image.sizing.js" />
         <add src="helper/inflections.js" />
         <add src="helper/nesting.js" />
         <add src="helper/pluralize.js" />
