--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HandlebarsControllerConfiguration.cs" />
+    <Compile Include="HandlebarsJsonFormatter.cs" />
     <Compile Include="HandlebarsMediaTypeFormatter.cs" />
     <Compile Include="HttpUtility.cs" />
     <Compile Include="IRequestFormatter.cs" />
