--- a/src/Proxy/Handlebars.Proxy/Handlebars.Proxy.csproj
+++ b/src/Proxy/Handlebars.Proxy/Handlebars.Proxy.csproj
@@ -124,7 +124,9 @@
     <Compile Include="WebServerModule.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
