Fixes for development proxy

--- a/src/Proxy/Handlebars.Proxy/packages.config
+++ b/src/Proxy/Handlebars.Proxy/packages.config
@@ -16,4 +16,5 @@
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net451" />
 </packages>
