Long Overdue Cleanup
- Updated many many bugs
- Big performance fixes
- Improved proxy performance
- Support for proxy authentication
- Added local caching of responses from server
- Added basic react support

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\CacheCow\src\CacheCow.Client\packages.config" />
+  <repository path="..\..\..\CacheCow\src\CacheCow.Common\packages.config" />
   <repository path="..\Engine\ClearScriptEngine\packages.config" />
   <repository path="..\Engine\NodeEngine\packages.config" />
   <repository path="..\Example\ExampleMvc\packages.config" />
