--- a/src/Proxy/Handlebars.Proxy/app.config
+++ b/src/Proxy/Handlebars.Proxy/app.config
@@ -27,7 +27,7 @@
         <add src="helper/pluralize.js" />
         <add src="helper/template.js" />
         <add src="helper/variable.js" />
-
+        
         <!-- Scripts can be downloaded from anywhere, making it easy to use with your 
              existing build processes. 
         <add src="http://cdn.archfashion.dev/script/handlebars.helper.min.js" />-->
@@ -45,7 +45,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -58,6 +58,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
