Removing SSL Checks from Proxy

--- a/src/Handlebars.Proxy/app.config
+++ b/src/Handlebars.Proxy/app.config
@@ -5,6 +5,12 @@
       <section name="settings" type="Handlebars.HandlebarsConfigurationHandler, Handlebars" allowLocation="true" allowDefinition="Everywhere" />
     </sectionGroup>
   </configSections>
+  <system.net>
+    <settings>
+      <servicePointManager checkCertificateName="false"
+                           checkCertificateRevocationList="false" /> 
+    </settings>
+  </system.net>
   <handlebars>
     <settings engine="ClearScriptEngine" basePath="C:\Home\Development\handlebars-net\src\ExampleWebApi\bin\">
       <include>
