--- a/src/Handlebars.Proxy/app.config
+++ b/src/Handlebars.Proxy/app.config
@@ -7,8 +7,7 @@
   </configSections>
   <system.net>
     <settings>
-      <servicePointManager checkCertificateName="false"
-                           checkCertificateRevocationList="false" /> 
+      <servicePointManager checkCertificateName="false" checkCertificateRevocationList="false" /> 
     </settings>
   </system.net>
   <handlebars>
