--- a/src/Handlebars/packages.config
+++ b/src/Handlebars/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClearScript.V8" version="5.4.3" targetFramework="net40" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40" />
+  <package id="ClearScript.V8" version="5.4.6" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net40" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net40" requireReinstallation="True" />
 </packages>
