--- a/src/Engine/ClearScriptEngine/packages.config
+++ b/src/Engine/ClearScriptEngine/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.1.1" targetFramework="net451" />
   <package id="ClearScript.V8" version="5.4.6" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
 </packages>
