--- a/src/Handlebars.Proxy/packages.config
+++ b/src/Handlebars.Proxy/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.1.1" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
@@ -10,8 +11,7 @@
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net451" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net451" requireReinstallation="True" />
 </packages>
