--- a/src/Handlebars.WebApi/packages.config
+++ b/src/Handlebars.WebApi/packages.config
@@ -115,4 +115,5 @@
   <package id="System.Xml.XmlDocument" version="4.0.1" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.0.1" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.0.1" targetFramework="net461" />
+  <package id="Wire" version="0.8.1" targetFramework="net462" />
 </packages>
