Updated Cache Naming
- Updated name of the attribute to be "CacheControl" as it scopes both
etags and output caching
- Updated some helper functions
- Updated the key provider to match the return of multiple key values to
be hashed

--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -416,6 +416,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\CacheControlProfile.cs" />
+    <Compile Include="Caching\Time.cs" />
     <Compile Include="Caching\DefaultCacheStore.cs" />
     <Compile Include="Caching\DefaultCacheKeyProvider.cs" />
     <Compile Include="Caching\IEtagCacheStore.cs" />
