--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -417,6 +417,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caching\CacheControlProfile.cs" />
+    <Compile Include="Caching\MockCacheStore.cs" />
     <Compile Include="Caching\Time.cs" />
     <Compile Include="Caching\DefaultCacheStore.cs" />
     <Compile Include="Caching\DefaultCacheKeyProvider.cs" />
