Json Formatter & Redirection Caching
- Fixed a bug with cache control / handlebars detection (via Formatter
Attribute)
- Redirection results are now cacheable which will help with complex
redirect logic which was previously not cached
- Adding a JsonWithCache output formatter and surrounding support
classes, keeping as close to native JsonOutputFormatter as possible

--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -435,6 +435,11 @@
     <Compile Include="HttpUtility.cs" />
     <Compile Include="Caching\ICacheKeyProvider.cs" />
     <Compile Include="IRequestFormatter.cs" />
+    <Compile Include="JsonWithCacheOutputFormatter.cs" />
+    <Compile Include="JsonWithCacheResultExecutor.cs" />
+    <Compile Include="MultiTextWriter.cs" />
+    <Compile Include="MvcJsonWithCacheMvcCoreBuilderExtensions.cs" />
+    <Compile Include="MvcJsonWithCacheMvcOptionsSetup.cs" />
     <Compile Include="SectionData.cs" />
     <Compile Include="TemplateProvider\MapPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
