Bug Fixes & Enhancements
- Fixed bug with donut execution and request context reference being
updated globally
- Fixed bug with etag enabled but BuildWIthHash being null
- Updated time helpers
- Removed logging due to disposal issues

--- a/src/Handlebars.WebApi/Handlebars.WebApi.csproj
+++ b/src/Handlebars.WebApi/Handlebars.WebApi.csproj
@@ -437,6 +437,8 @@
   <ItemGroup>
     <Compile Include="Caching\CacheControlOptions.cs" />
     <Compile Include="Caching\CacheControlProfile.cs" />
+    <Compile Include="Caching\DonutHttpContext.cs" />
+    <Compile Include="Caching\DonutHttpRequest.cs" />
     <Compile Include="Caching\MockCacheStore.cs" />
     <Compile Include="Caching\Time.cs" />
     <Compile Include="Caching\DefaultCacheStore.cs" />
