Proxy Migration & Header Fixes
- Ensuring cached responses of x-format=json still return the x-template
header for the proxy
- Updated proxy to run with .net 4.6.2

--- a/src/Handlebars.Proxy/app.config
+++ b/src/Handlebars.Proxy/app.config
@@ -11,13 +11,16 @@
     </settings>
   </system.net>
   <handlebars>
-    <settings engine="ClearScriptEngine" basePath="C:\Home\Development\handlebars-net\src\ExampleWebApi\bin\">
+    <settings engine="ClearScriptEngine" 
+              basePath="C:\Home\Development\handlebars-net\src\ExampleWebApi\bin\"
+              scriptPath="">
       <include>
         <!-- You can specify files which have been included in any project,
              to keep the standard install simple I've included a bunch of 
              helpers in Handlebars.Helper project, which is a reference -->
         <add name="accounting" src="script/accounting.min.js"/>
         <add name="moment" src="script/moment.min.js"/>
+        <add name="marked" src="script/marked.min.js"/>
         <add name="_" src="script/underscore.js"/>
         <add src="script/underscore-string.js"/>
         <add src="helper/each.js"/>
